# gtkrocketchat

./: .gitignore  Makefile.am  README  configure.ac  gtkrocketchat  gtkrocketchat.desktop  gtkrocketchat.desktop.in
